# COMP371-rust

./: .gitignore  Cargo.toml  Dockerfileprod  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  heroku.yml
data/shaders/: frag.glsl
nginx/: default.conf
resources/shaders/: frag.glsl  vert.glsl
src/: camera.rs  cube.rs  engine.rs  game.rs  lib.rs  object.rs
src/builder/: camera.rs  engine.rs  mod.rs  object.rs  scene.rs
src/builder/component/: transform.rs
src/builder/engine/: engine.rs  mod.rs  scene.rs
src/builder/model/: camera.rs  mod.rs  object.rs
src/component/: children.rs  input.rs  mod.rs  shader.rs  transform.rs
src/controller/: camera_controller.rs  mod.rs
src/engine/: camera.rs  engine.rs  mod.rs  scene.rs  transform.rs
src/game/: mod.rs
src/game/controller/: fps_controller.rs  mod.rs  rotate.rs
src/game/object/: camera.rs  cube.rs  mod.rs
src/io/: gamepad.rs  input.rs  keyboard.rs  mod.rs  mouse.rs
src/model/: camera.rs  mod.rs  object.rs
src/objects/: mod.rs
src/objects/primitives/: cube.rs  mod.rs
src/render/: buffer.rs  camera.rs  mod.rs  object.rs  shader.rs
src/render/primitives/: cube.rs  mod.rs
src/shaders/: frag.glsl  vert.glsl
src/utils/: mod.rs
ww/: index.html  index.js  package-lock.json  package.json
www/: index.js  nginx.conf  package-lock.json  package.json
