[package]
name = "soen287"
version = "0.1.0"
authors = ["alexandre-lavoie <alexandre.lavoie00@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.46"
wasm-bindgen = "0.2.69"
mat4 = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'Node',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',
  'console',
]